_includes/manuals/1.1/4.2.4_smart_vars.md

Smart variables are a tool to provide data (Key / Value), normally to your puppet ENC, depending on a set of rules. They are intended to be a stepping stone to full parameterized classes.

Smart variable is usually associated with a puppet class, and may have multiple values, all depending on hierarchical context or various conditions a user can wish to apply.

for example:

![Example](/static/images/screenshots/4.2.4_smartvar.png)

#### Creating a Smart Variable

Start by going to Foreman -> More -> Puppetclasses and then click one of your classes to edit it.

Click on the Smart Variables tab. If you have any existing Smart Variables, they will be listed at the left side of the tab.

Click New Variable, and you will be presented with a set of input fields:

<table class="table table-bordered table-condensed">
    <tbody>
    <tr>
      <td>Name</td>
      <td>What the parameter will be called in the ENC data</td>
    </tr>
    <tr>
      <td>Description</td>
      <td>A free form text box for your own information</td>
    </tr>
    <tr>
      <td>Default Value</td>
      <td>What the ENC will use if no other criteria is matched</td>
    </tr>
    <tr>
      <td>Type Validator</td>
      <td>A combo-box of data types. The type applies to the next field, the validator</td>
    </tr>
    <tr>
      <td>Validator Constraint</td>
      <td>Used to enforce certain values for the Smart Variable. See below for examples</td>
    </tr>
    <tr>
      <td>Order</td>
      <td>A list of variables which Foreman will search (in order) for the validator</td>
    </tr>
</tbody></table>
    
Once you've created the defaults for your Smart variable, you then need to add at least one criterion to match against - click the "plus" under your variable, and two more input fields will appear:

<table class="table table-bordered table-condensed">
    <tbody>
    <tr>
      <td>Match</td>
      <td>Should state a name = value relationship that Foreman use to match against the entries in searchlist</td>
    </tr>
    <tr>
      <td>Value</td>
      <td>What the parameter should be in the ENC, if this rule is matched</td>
    </tr>
</tbody></table>

#### Validators

The fourth and fifth fields in the Smart Variable combine to produce a validation criteria for the final value of the Smart Variable.

##### String validators

At present, the string type cannot be validated - leave the validator field blank, and all strings in the variable will be considered acceptable

##### Regexp / List validators

By entering a list (comma-separated, no spaces) or a regex (no delimiter required), the value to be assigned to the Smart Variable will be checked against this list. If the value does not match the validator, and error will be raised.

#### Ordering

All the ordering information is stored in the sixth field of the Smart Variable (order). The order matters and is used to find the first match.

#### Examples

##### Example 1 - Simple change to a single host

All our hosts use *server.foo* for something, except bob.domain.com which uses *server2.bar*:

<table class="table table-bordered table-condensed">
    <tbody>
    <tr>
      <td>Name</td>
      <td>target</td>
    </tr>
    <tr>
      <td>Description</td>
      <td>The target server to talk to</td>
    </tr>
    <tr>
      <td>Default Value</td>
      <td>server.foo</td>
    </tr>
    <tr>
      <td>Type Validator</td>
      <td>string</td>
    </tr>
    <tr>
      <td>Validator Constraint</td>
      <td></td>
    </tr>
    <tr>
      <td>Order</td>
      <td>fqdn<br />           hostgroup<br />           os<br />           domain</td>
    </tr>
    <tr>
      <td>Match</td>
      <td>fqdn = bob.domain.com</td>
    </tr>
    <tr>
      <td>Value</td>
      <td>server2.bar</td>
    </tr>
</tbody></table>

##### Example 2 - Change for a group of hosts (via custom fact) with validation and ordering

Most hosts need to use a port of *80* but all machines with a fact *region* and value *europe* need to use *8080*. To do this, you have to add the factname (in this example *region*) to the searchlist:

<table class="table table-bordered table-condensed">
    <tbody>
    <tr>
      <td>Name</td>
      <td>port</td>
    </tr>
    <tr>
      <td>Description</td>
      <td>The port to use</td>
    </tr>
    <tr>
      <td>Default Value</td>
      <td>80</td>
    </tr>
    <tr>
      <td>Type Validator</td>
      <td>list</td>
    </tr>
    <tr>
      <td>Validator Constraint</td>
      <td>80,443,8080</td>
    </tr>
    <tr>
      <td>Order</td>
      <td>fqdn<br />           region<br />           hostgroup<br />           os<br />           domain</td>
    </tr>
    <tr>
      <td>Match</td>
      <td>region = europe</td>
    </tr>
    <tr>
      <td>Value</td>
      <td>8080</td>
    </tr>
    <tr>
      <td>Match</td>
      <td>fqdn = foo.domain</td>
    </tr>
    <tr>
      <td>Value</td>
      <td>67</td>
    </tr>
</tbody></table>

Note that all machines will get either 80 or 8080 as required, except foo.domain which will generate an error, since 67 is not in the list validator. Note also that foo.domain will match before region, since it is higher in the searchlist. The rule ordering does not matter.

It is also possible to mix conditions, e.g.

<table class="table table-bordered table-condensed">
    <tbody>
    <tr>
      <td>Name</td>
      <td>port</td>
    </tr>
    <tr>
      <td>Description</td>
      <td>The port to use</td>
    </tr>
    <tr>
      <td>Default Value</td>
      <td>80</td>
    </tr>
    <tr>
      <td>Type Validator</td>
      <td>list</td>
    </tr>
    <tr>
      <td>Validator Constraint</td>
      <td>80,443,8080</td>
    </tr>
    <tr>
      <td>Order</td>
      <td>fqdn<br />           region, hostgroup, environment<br />           hostgroup<br />           environment<br />           domain</td>
    </tr>
    <tr>
      <td>Match</td>
      <td>fqdn = foo.domain</td>
    </tr>
    <tr>
      <td>Value</td>
      <td>67</td>
    </tr>
    <tr>
      <td>Match</td>
      <td>region = europe, hostgroup = "web servers", environment = production</td>
    </tr>
    <tr>
      <td>Value</td>
      <td>8080</td>
    </tr>
</tbody></table>

#### API usage

It's also possible to retrieve these values if you're not using a ENC, via a custom Puppet function or a http request.. You'll need to retrieve the value from

    https://foreman/hosts/<fqdn>/lookup_keys/<key>

You can find a ready-made function for your puppet module [here](https://github.com/theforeman/puppet-foreman/blob/master/lib/puppet/parser/functions/smartvar.rb)

